--- a/index1.html
+++ b/index1.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>woy jangan lupa beli ya!</title>
 </head>
 <body>
     <h1>Hello World</h1>
+    <button>klikk</button>
 </body>
 </html>
